# rust-dictcc-translator

./: Cargo.toml  README.md
src/: dict.rs  helper.rs  input.rs  input_resolver.rs  language.rs  main.rs  stupisaurus.rs  translation.rs  translation_request.rs  web.rs
templates/: beta.html  index.html  index_list.html
