[package]
name = "rust-dictcc-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
regex = "1"
json = "0.12.4"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
futures = "0.3.28"
#openssl = { version = "0.10", features = ["vendored"] }